shesmu-server/src/test/resources/good/optional-missing.shesmu
Input gsi_std;

Run optional
  With {
    junk = True
  }
